fix: Colours contrast and label for input

--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,10 @@
 :root {
-  --color-primary: #468E82;
+  --color-primary: #2D5C52;
   --color-secondary: #5A3D32;
   --color-tertiary: #73BAAC;
   --color-text: #212121;
   --color-accent: #BBBBBB;
-  --color-background: #F8EFE7;
+  --color-background: #FAF5EF;
   --color-white: #FEFEFE;
   --color-error: #e5f761;
 }
